# ucsf-nmr

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
examples/: continous.rs  tile_plots.rs  tile_plots_3d.rs  tile_plots_3d_ndarray.rs
src/: lib.rs
tests/: 3d.rs  continous.rs  parsing.rs  tiles.rs
tests/data/: 15n_hsqc.ucsf  15n_hsqc.ucsf.invalid_format  Nhsqc_highres_600MHz.ucsf
tests/snapshots/: continous__data_continous_2d_simple.snap  parsing__data_continous.snap
