[package]
name = "ucsf_nmr"
description = "Parser for ther UCSF NMR file format"
version = "0.1.3"
authors = ["Maximilian Goisser <goisser94@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"
keywords = ["nmr", "spectum", "format", "ucsf", "parser"]
repository = "https://github.com/hobofan/ucsf-nmr"
readme = "README.md"

[dependencies]
nom = "5.1.1"
thiserror = "1.0.15"

[dev-dependencies]
float_eq = "0.2.0"
plotters = "0.2.12"
palette = "0.5.0"
insta = "0.16.0"
